# yakcc

./: .gitattributes  .gitignore  .intentional-deletions  AGENTS.md  DESIGN.md  FEDERATION.md  FEDERATION_PROTOCOL.md  LICENSE  LICENSE-ATOMS  MANIFESTO.md  MASTER_PLAN.md  PLAN.md  README.md  VERIFICATION.md  WASM_HOST_CONTRACT.md  biome.json  initialize.txt  package.json  pnpm-lock.yaml  suggestions.txt  tsconfig.base.json  turbo.json
.changeset/: config.json
.github/ISSUE_TEMPLATE/: alpha-feedback.md
.github/workflows/: bench-b1-latency.yml  bench-b7-commit.yml  (+15 more)
bench/B1-latency/http-routing/rust-baseline/: Cargo.toml
bench/B1-latency/http-routing/rust-baseline/src/: main-software.rs  main.rs
bench/B1-latency/integer-math/rust-baseline/: Cargo.toml
bench/B1-latency/integer-math/rust-baseline/src/: main-software.rs  main.rs
bench/B1-latency/json-transformer/rust-baseline/: Cargo.toml
bench/B1-latency/json-transformer/rust-baseline/src/: main-software.rs  main.rs
bootstrap/: CORPUS_STATS.md  expected-failures.json  expected-roots.json
docs/: ADVANCED.md  ALPHA.md  CONTRIBUTING.md  PRIOR_ART.md  PROOFS.md  PROOF_BOUNTY_WALKTHROUGH.md  REGISTRY_LICENSE_POLICY.md  RELEASE.md  TROUBLESHOOTING.md  USING_YAKCC.md  V2_SELF_HOSTING_DEMO.md  V2_SELF_SHAVE_DEMO.md  enforcement-config.md  proof-incentive-economics.md
patches/: @yao-pkg__pkg@6.19.0.patch
plans/: fix-619-ts-cjs-prelude.md  fix-628-nightly-bootstrap-verify.md  import-replacement-triad.md  wi-1031-bootstrap-shave.md  wi-1112-fast-nightly.md  wi-1117-slice2-atom-index-exporter.md  wi-1123-airgap-bge-native.md  wi-193-b8-curve-execute.md  wi-193-s1-b8-curve.md  wi-485-closer-parity-as-ci.md  wi-508-import-intercept-hook.md  wi-510-s2-headline-bindings.md  wi-510-s2-validator.md  wi-510-s3-semver-bindings.md  wi-510-s4-uuid-nanoid.md  wi-510-s5-date-fns.md  wi-510-s6-jsonwebtoken-bcrypt.md  wi-510-s7-lodash.md  wi-510-s8-zod.md  wi-510-s9-p-limit-p-throttle.md  wi-510-shadow-npm-corpus.md  wi-512-b10-import-heavy-bench.md  wi-512-s2-b10-demo-task.md  wi-512-s3-b10-broaden.md  wi-525-cache-eperm.md  wi-531-asc-compile-cache.md  wi-542-dec-id-drift.md  wi-551-compile-self-recon-gap.md  wi-551-s1.md  wi-551-s2.md  wi-575-test-advisory-split.md  wi-578-hook-prompt-rewrite.md  wi-579-hook-enforcement-architecture.md  wi-579-s1-layer1-intent-specificity.md  wi-579-s2-layer2-result-set-size.md  wi-579-s3-layer3-atom-size-ratio.md  wi-579-s4-layer4-descent-tracker.md  wi-579-s5-layer5-drift-detection.md  wi-579-s6-closer.md  wi-585-umd-iife-decompose.md  (+43 more)
scripts/: affected-packages.sh  audit-property-tests.mjs  build-as-cache-seed.mjs  check-no-bom.mjs  check-no-bom.test.mjs  go-ast-parse.go  pre-pr-check.sh
tmp/: scope-wi-703-b2-bloat-verdict.json  wi-016-corpus-sample.mjs  wi-v2-glue-aware-impl-audit.md  wi-v2-glue-aware-shave-audit.md
website/: .gitignore  astro.config.mjs  biome.json  package.json  tsconfig.json
(+707 files in other folders)
